Modified project settings

--- a/project.config
+++ b/project.config
@@ -2,3 +2,5 @@
 	inheritFrom = All-Projects
 [access "refs/*"]
 	owner = group ldap/acumos-gerrit-generic-model-runner-committers
+[project]
+	description = Acumos H2O/Generic Java Model Runner
