Change packaging to pom
The deferred deploy step fails during the merge job because no jar
is deployed.  Use POM packaging instead as a test.

Change-Id: I68aa16d3c8c6929b889e0560d395f353c109c989
Signed-off-by: Christopher Lott (cl778h) <clott@research.att.com>

--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,8 @@
 	<groupId>org.acumos.generic-model-runner</groupId>
 	<artifactId>h2o-genericjava-modelrunner</artifactId>
 	<version>1.0.3-SNAPSHOT</version>
+	<!-- deploys only a docker image -->
+	<packaging>pom</packaging>
 
 	<name>Acumos H2O/Generic Java Model Runner</name>
 	<description>Acumos H2O/Generic Java Model Runner</description>
