Add JUnit test cases for all end points
Change-Id: I52235dd3830bffe0be53407cbd781195312e38a5
Signed-off-by: thsiung <thsiung@att.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,6 +27,7 @@ spring.http.multipart.max-request-size=100MB
 # Linux version
 
 default_model=/models/model.jar
+#default_model=/models/model.zip
 default_protofile=/models/default.proto
 
 logging.file = ./logs/modelrunner.log 
@@ -46,7 +47,7 @@ model_config=/models/modelConfig.properties
 # DatasetProto$*.classes will be in $plugin_root\classes
 # pbuff.jar will be in $plugin_root\classes
 
-plugin_root=/plugins1
+plugin_root=/tmp/plugins
 
 
 
