Enhancements allowing less restricted protobuf
Change-Id: I22564b68a2e4889f527a1df0e98b198039449eb7
Signed-off-by: thsiung <thsiung@att.com>

--- a/src/main/resources/application.template
+++ b/src/main/resources/application.template
@@ -25,7 +25,7 @@ model_config=/models/modelConfig.properties
 # DatasetProto$*.classes will be in $plugin_root\classes
 # pbuff.jar will be in $plugin_root\classes
 
-plugin_root=/plugins
+plugin_root=/tmp/plugins
 
 
 
