Limit JVM memory use
Change-Id: I7ac2e53f30322c94a19199dd4986e408c098126a
Issue-ID: ACUMOS-187
Signed-off-by: Christopher Lott (cl778h) <clott@research.att.com>

--- a/pom.xml
+++ b/pom.xml
@@ -219,7 +219,7 @@
 								</assembly>
 								<cmd>
 									<!-- CDATA prevents Eclipse formatter from breaking line -->
-									<shell><![CDATA[java -Djava.security.egd=file:/dev/./urandom -jar /maven/${project.artifactId}-${project.version}.${project.packaging}]]></shell>
+									<shell><![CDATA[java -Xms128m -Xmx512m -Djava.security.egd=file:/dev/./urandom -jar /maven/${project.artifactId}-${project.version}.${project.packaging}]]></shell>
 								</cmd>
 							</build>
 						</image>
