--- a/models/model.template
+++ b/models/model.template
@@ -1,4 +1,5 @@
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.StringTokenizer;
 
 public class Multiplier {
@@ -27,17 +28,67 @@ public class Multiplier {
 		System.out.println("2 * " + str + " = " + sum.toString());
 		return sum.toString();
 	}
+	
+	public static ArrayList<Object> multiplyLong(String str) {
+		Object predictedClassValue = null;
+		ArrayList<Object> predictList = new ArrayList<Object>();
+
+		StringTokenizer st = new StringTokenizer(str, "\n");
+		while (st.hasMoreTokens()) {
+			predictedClassValue = getMultiplyLong(st.nextToken());
+			predictList.add(predictedClassValue);
+		}
+
+		return predictList;
+	}
+
+	private static Object getMultiplyLong(String str) {
+		System.out.println("Input Str: " + str);
+		StringTokenizer st = new StringTokenizer(str, ",");
+		Long sum = (long)2;
+
+		while (st.hasMoreTokens()) {
+			sum = sum * Long.parseLong((st.nextToken().trim()));
+		}
+
+		System.out.println("2 * " + str + " = " + sum.toString());
+		return sum.longValue();
+	}
+	
+	public static ArrayList<Object> multiplyAll(String str) {
+		Object predictedClassValue = null;
+		ArrayList<Object> predictList = new ArrayList<Object>();
+
+		StringTokenizer st = new StringTokenizer(str, "\n");
+		while (st.hasMoreTokens()) {
+			predictedClassValue = getMultiplyLong(st.nextToken());
+			predictList.add(predictedClassValue);
+		}
+		for(int i = 0; i < 5; i ++)
+			predictList.add((float)2.222);
+			
+		for(int j = 0; j < 3; j ++)
+			predictList.add((double)3.333);
+			
+		for(int k = 0; k < 2; k ++)
+			predictList.add("Bye");
+			
+		System.out.println("In multiplyAll(): returning prediction results: " + Arrays.toString(predictList.toArray()));
+
+		return predictList;
+	}
+
+	
 
 	public static ArrayList<Object> classify(String str) {
 		Object pVal = null;
 		ArrayList<Object> pList = new ArrayList<Object>();
 		StringTokenizer st = new StringTokenizer(str, "\n");
 		while (st.hasMoreTokens()) {
-			pVal = st.nextToken() + "," + 9 + ",Hello," + 2 + "\n";
+			pVal = st.nextToken() + ",Hello," + 2 + "\n";
 			pList.add(pVal);
 		}
 
 		return pList;
-
 	}
 }
