--- a/models/model.template
+++ b/models/model.template
@@ -93,9 +93,67 @@ public class Multiplier {
 
 		return predictList;
 	}
-
 	
+	public static ArrayList<Object> transform(String str) {
+		Object predictedClassValue = null;
+		ArrayList<Object> predictList = new ArrayList<Object>();
 
+		StringTokenizer st = new StringTokenizer(str, "\n");
+		while (st.hasMoreTokens()) {
+			String line = st.nextToken();
+			
+			System.out.println("Input Line: " + line);
+			StringTokenizer st1 = new StringTokenizer(line, ",");
+			String output = "[";
+			while (st1.hasMoreTokens()) {
+				if (!output.equals("["))
+					output += "|";
+				String next = st1.nextToken().trim();
+				System.out.println("The current token is " + next);
+				output += next;
+			}
+            output += "]";
+			System.out.println("After transformation: " + output);
+			predictedClassValue = (Object)output;
+			
+			predictList.add(predictedClassValue);
+		}
+		for(int i = 0; i < 3; i ++)
+			predictList.add((float)2.222);
+			
+		for(int j = 0; j < 2; j ++)
+			predictList.add((double)3.333);
+			
+		for(int k = 0; k < 3; k ++)
+			predictList.add("Bye");
+			
+		predictList.add((int)8888);
+		predictList.add((int)-8888);
+		predictList.add("Blessings");
+		
+		predictList.add((long)77778888);
+		predictList.add((boolean)true);
+		predictList.add((long)-77778888);
+		predictList.add((int)12345678);
+		predictList.add((long)11112222);
+		predictList.add((int)-11112222);
+		predictList.add((long)-11112222);
+		
+		Random r=new Random();
+		
+		byte[] bytes = {69, 121, 101, 45, 62, 118, 101, 114, (byte) 196, (byte) 195, 61, 101, 98};
+		predictList.add(bytes);
+		
+		predictList.add("8.88");
+		predictList.add("3.14159");
+		predictList.add("6");
+		predictList.add("5");
+		
+		System.out.println("In transform(): returning prediction results: " + Arrays.toString(predictList.toArray()));
+
+		return predictList;
+	}
+	
 	public static ArrayList<Object> classify(String str) {
 		Object pVal = null;
 		ArrayList<Object> pList = new ArrayList<Object>();
