Add API end point /{operation}
Rename API /operation/{operation} to /{operation}

Change-Id: I2211847a9d83a205f03f4758e0f55c06c61d9f42
Signed-off-by: thsiung <thsiung@att.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,8 +26,8 @@ spring.http.multipart.max-request-size=100MB
 
 # Linux version
 
-default_model=/models/model.jar
-#default_model=/models/model.zip
+#default_model=/models/model.jar
+default_model=/models/model.zip
 default_protofile=/models/default.proto
 
 logging.file = ./logs/modelrunner.log 
@@ -36,7 +36,7 @@ logging.file = ./logs/modelrunner.log
 # if model_type is H, then the /predict method will use H2O model; otherwise, it will use generic Model
 # if model_type is not present, then the default is H
 
-model_type=G
+model_type=H
 model_config=/models/modelConfig.properties
 
 # Linux some properties are specific to java generic models
