--- a/models/model.template
+++ b/models/model.template
@@ -2,8 +2,38 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.StringTokenizer;
 import java.util.Random;
+import java.io.File;
 
 public class SimpleMockModel {
+	public static ArrayList<Object> testJSONS(String str) {
+		ArrayList<Object> predictList = new ArrayList<Object>();
+		predictList.add(str);
+		return predictList;
+	}
+	
+	public static ArrayList<Object> testJSONF(File file) {
+		ArrayList<Object> predictList = new ArrayList<Object>();
+		String jsonStr = "{\"rows\":[{\"operand\":2},{\"operand\":3},{\"operand\":4}]}";
+		predictList.add(jsonStr);
+
+		return predictList;
+	}
+	
+	public static ArrayList<Object> predictS(String str) {
+		ArrayList<Object> predictList = new ArrayList<Object>();
+		String jsonStr = "{\"prediction\":[\"iPhone\",\"Samsung\",\"Nexus\"]}";
+		predictList.add(str);
+		return predictList;
+	}
+	
+	public static ArrayList<Object> predictF(File file) {
+		ArrayList<Object> predictList = new ArrayList<Object>();
+		String jsonStr = "{\"prediction\":[\"Kitty\",\"Lamb\",\"Puppy\"]}";
+		predictList.add(jsonStr);
+
+		return predictList;
+	}
+
 	public static ArrayList<Object> multiply(String str) {
 		Object predictedClassValue = null;
 		ArrayList<Object> predictList = new ArrayList<Object>();
