Generate/Add a CSV header in the un-marshaled data
Issue-ID: ACUMOS-1580

Change-Id: Id99cb16ecebcb21e1c770327bf98b5c74cc729f7
Signed-off-by: Teyu Hsiung <thsiung@att.com>

--- a/models/model.template
+++ b/models/model.template
@@ -65,7 +65,13 @@ public class SimpleMockModel {
 		ArrayList<Object> predictList = new ArrayList<Object>();
 
 		StringTokenizer st = new StringTokenizer(str, "\n");
+		boolean header = true;
 		while (st.hasMoreTokens()) {
+			if(header) {
+			        st.nextToken();
+				header = false;
+				continue;
+			}	
 			predictedClassValue = getMultiplyLong(st.nextToken());
 			predictList.add(predictedClassValue);
 		}
