--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.acumos.generic-model-runner</groupId>
 	<artifactId>h2o-genericjava-modelrunner</artifactId>
-	<version>2.2.1-SNAPSHOT</version>
+	<version>2.2.2-SNAPSHOT</version>
 
 	<name>Acumos H2O/Generic Java Model Runner</name>
 	<description>Acumos H2O/Generic Java Model Runner</description>
@@ -12,7 +11,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.4.RELEASE</version>
+		<version>2.0.4.RELEASE</version>
 	</parent>
 
 	<properties>
@@ -69,7 +68,7 @@
 		<dependency>
 			<groupId>com.github.os72</groupId>
 			<artifactId>protoc-jar</artifactId>
-			<version>3.4.0</version>
+			<version>3.6.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.protobuf</groupId>
@@ -79,37 +78,43 @@
 		<dependency>
 			<groupId>com.google.protobuf</groupId>
 			<artifactId>protobuf-java-util</artifactId>
-			<version>3.5.1</version>
+			<version>3.6.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.api</groupId>
 			<artifactId>api-common</artifactId>
-			<version>1.0.0</version>
+			<version>1.7.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.api.grpc</groupId>
 			<artifactId>googleapis-common-protos</artifactId>
 			<version>0.0.3</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.9.6</version>
+		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>2.5</version>
+			<version>2.6</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>3.0</version>
+			<version>3.7</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
-			<version>1.3</version>
+			<version>1.3.3</version>
 		</dependency>
 		<dependency>
 			<groupId>ai.h2o</groupId>
 			<artifactId>h2o-genmodel</artifactId>
-			<version>3.14.0.2</version>
+			<version>3.20.0.5</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.slf4j</groupId>
@@ -120,11 +125,12 @@
 		<dependency>
 			<groupId>org.metawidget.modules</groupId>
 			<artifactId>metawidget-all</artifactId>
-			<version>1.20</version>
+			<version>3.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-autoconfigure</artifactId>
+			<version>2.0.4.RELEASE</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.github.os72/protobuf-dynamic -->
 		<dependency>
@@ -132,27 +138,6 @@
 			<artifactId>protobuf-dynamic</artifactId>
 			<version>0.9.4</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.google.api.client/google-api-client-json -->
-		<dependency>
-			<groupId>com.google.api.client</groupId>
-			<artifactId>google-api-client-json</artifactId>
-			<version>1.2.3-alpha</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.google.api.client/google-api-client-util -->
-		<dependency>
-			<groupId>com.google.api.client</groupId>
-			<artifactId>google-api-client-util</artifactId>
-			<version>1.2.3-alpha</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.google.api.client/google-api-client-http -->
-		<dependency>
-			<groupId>com.google.api.client</groupId>
-			<artifactId>google-api-client-http</artifactId>
-			<version>1.2.3-alpha</version>
-		</dependency>
-
-
-
 
 	</dependencies>
 
@@ -281,7 +266,7 @@
 					</images>
 				</configuration>
 				<!-- build Docker images in install phase, push in deploy phase -->
-				<executions>
+  				<executions>
 					<execution>
 						<goals>
 							<goal>build</goal>
