Fix cmd pulling protobuf runtime from maven repo
Issue ID: ACUMOS-2449

Change-Id: I6455646c5f9ad89d8efb1399fb067153b4305332
Signed-off-by: Teyu Hsiung <thsiung@att.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,8 +26,8 @@ spring.http.multipart.max-request-size=100MB
 
 # Linux version
 
-default_model=/models/model.jar
-#default_model=/models/model.zip
+#default_model=/models/model.jar
+default_model=/models/model.zip
 default_protofile=/models/default.proto
 
 logging.file = ./logs/modelrunner.log 
