Open log directory permissions to write
Change-Id: Iea95ad8c8ff80b2a67212103de943a5b57e16b16
Issue-Id: ACUMOS-2777
Signed-off-by: Lott, Christopher (cl778h) <cl778h@att.com>

--- a/pom.xml
+++ b/pom.xml
@@ -243,6 +243,9 @@
 									<descriptorRef>artifact</descriptorRef>
 								</assembly>
 								<runCmds>
+									<!-- Ensure logs dir exists and is world writable -->
+									<runCmd>mkdir /maven/logs</runCmd>
+									<runCmd>chmod -R 777 /maven</runCmd>
 									<runCmd>
 										<!-- CDATA prevents Eclipse formatter from breaking line -->
 										<![CDATA[curl -OL https://github.com/google/protobuf/releases/download/v3.4.0/protoc-3.4.0-linux-x86_64.zip]]>
