Swagger Related Changes
Change-Id: I3d72630a12619e4a286c57745034d571c748dcd1
IssueId: ACUMOS-732
Signed-off-by: Aditya Soni <AS00595133@techmahindra.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,7 @@
 
 #server.contextPath=/modelrunner
 server.port=8334
+server.servlet.context-path=/model
 
 spring.http.multipart.max-file-size=100MB
 spring.http.multipart.max-request-size=100MB
