--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@
 # ===============LICENSE_END=========================================================
 ###
 
-#server.contextPath=/modelrunner
+server.contextPath=/modelrunner
 server.port=8334
 
 spring.http.multipart.max-file-size=100MB
