--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 		<!-- Not supplied to all jobs; e.g., Javadoc -->
 		<docker.pull.registry>nexus3.acumos.org:10001</docker.pull.registry>
 		<!-- Supplied by Jenkins -->
-		<docker.push.registry>${env.NEXUS3_PUSH_REGISTRY}</docker.push.registry>
+		<docker.push.registry>${env.CONTAINER_PUSH_REGISTRY}</docker.push.registry>
 	</properties>
 
 	<!-- No repositories section. -->
