--- a/project.config
+++ b/project.config
@@ -2,6 +2,7 @@
 	inheritFrom = All-Projects
 [access "refs/*"]
 	owner = group ldap/acumos-gerrit-generic-model-runner-committers
+	owner = group saml/acumos-gerrit-generic-model-runner-committers
 	read = group GitHub Replication
 [project]
 	description = Acumos H2O/Generic Java Model Runner
